Added header footer main

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <![endif]-->
 
     <section class="wrapper">
+        <header>Hi. I'm a developer.</header>
+        <main>I am a new coder who switched to this career because I am exhausted from working in a creative field and
+            just want a rigid streucture where I am told all the specifics. If I have to get creative or decide for
+            myslef, I will probably procrastinate and never get it done.</main>
         <div class="div-1">
             <p>There's three types of procrastination. … [The] classic procrastination is consciously delaying what we
                 know we should be doing. So, if I have some bills on the counter, I know that I should pay them, but I'm
@@ -36,13 +40,14 @@
                 doing even when you don't feel like doing it.</p>
         </div>
         <div class="div-3">
-            <p>The third type of procrastination is called priority dilution, and this is fascinating, … [because]
+            <p>The third type of procrastination is called priority dilution, and this is fascinating,
                 priority dilution is the chronic overachiever's form of procrastination. What's different about it is,
-                unlike the first two, … priority dilution is not about being lazy or disengaged or distracted, but it is
-                the same net result of the first two, which is... you leave the office or you end your day with your most
-                significant priorities incomplete, not because you're lazy, but because you allowed your attention to
+                unlike the first two, priority dilution is not about being lazy or disengaged or distracted, but it is
+                the same net result of the first two... you leave the office or you end your day with your
+                most significant priorities incomplete, not because you're lazy, but because you allowed your attention to
                 shift to less significant but perhaps more urgent tasks.</p>>
         </div>
+        <footer>Check me out, I'm a footer.</footer>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
